# Omni

./: .gitignore  3360d362-9701-4fa3-92dc-3304a38d14ad.pb  7e787841-e3e0-4bd7-a89e-1f5c9539625c.pb  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Implementing Omni Neural Protocol.md  LICENSE  Omnifile.example  README.md  SECURITY.md  Surpassing Node.js Runtime Performance.md  Untitled-1.ipynb  _gitignore.backup  binding.gyp  chunk3.txt  deploy-vps.sh  docker-compose.yml  errors.txt  fly.toml  go.work  go.work.sum  next.config.js  omni-framework.service  omni.cmd  omni.json  package-lock.json  package.json  patch.js  pnpm-lock.yaml  tailwind.config.js  test_omni.ts  tsconfig.json  zigcc.cmd  zigcxx.cmd
omni-cli-systems/cpp/: CMakeLists.txt  abi.hpp  auto.cpp  compile_flags.txt
omni-runtime/core/: Cargo.toml  Nexus.toml  build.rs  err.txt  phase15_demo.omni  test.ll  test.omni
omni-runtime/core/.cargo/: config.toml
omni-runtime/core/example_app/: Omnifile.toml  README.md
omni-runtime/core/examples/: analytics.omni  auth.omni  commerce.omni
omni-runtime/core/my_test_omni/: Omnifile.toml  README.md  main.omni  math.omni  math_mock.omni  my_module.omni  phase1_test.omni  phase2_test.omni  phase3_test.omni  phase4_test.omni  phase5_test_fail.omni  phase5_test_pass.omni  phase6_test.omni  phase7_test.omni
omni-runtime/core/omni_cpp_pipeline/: CMakeLists.txt
omni-runtime/core/phase8_app/: Omnifile.toml  README.md
omni-runtime/core/src/: engine.rs  lib.rs  nexus_validator.rs  omni_mind.rs  syscalls.rs  transpiler.rs
omni-runtime/core/test-app/: Omnifile.toml
omni-runtime/core/test-project/: Omnifile
omni-runtime/core/test_project/: Omnifile.toml  (+1 more)
omni-runtime/toolchain/: Cargo.toml  config.toml
(+12613 files in other folders)
