[package]
name = "omni-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnicore"
[[bin]]
name = "omni"
path = "src/compiler/main.rs"

[dependencies]
dashmap = "5.5.3"
tokio = { version = "1", features = ["full"] }
rayon = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
reqwest = { version = "0.11", features = ["json", "stream"] }
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
async-std = "1.12"
pest = "2.7"
pest_derive = "2.7"
toml = "1.1.2"
env_logger = "0.11.10"
v8 = "0.92.0"
anyhow = "1.0"
libloading = "0.8"
crossbeam = "0.8"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
